--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <groupId>fr.upsud.info</groupId>
 	<!-- Remplacez ici Nom1 et Nom2 par vos noms de votre binome dans l'ordre alphabetique -->
-    <artifactId>iia.td3-4_Nom1_Nom2</artifactId>
+    <artifactId>iia.td3-4_Bibitchkov_Krakowiak</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
     <description>
         Cours d'Introduction à l'Intelligence Artificielle. &lt;br/&gt;
         Code pour le tp sur les algorithmes pour les jeux
@@ -22,7 +22,7 @@
         <url>www.dep-informatique.u-psud.fr</url>
     </organization>
 
-    
+
     <!-- Remplacez ici Nom1 et Nom2 par vos noms de votre binome dans l'ordre alphabetique -->
     <name>iia.td3-4_Nom1_Nom2</name>
 
@@ -31,7 +31,7 @@
     <build>
         <plugins>
             <plugin>
-                <!-- Compilation of the project --> 
+                <!-- Compilation of the project -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
@@ -41,27 +41,27 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
-            
+
             <!-- Management of unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.13</version>
             </plugin>
-                  
+
         </plugins>
-        
+
     </build>
-    
+
     <dependencies>
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
-        
+
     </dependencies>
-    
+
 </project>
